[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datacore"
version = "0.1.1"
description = "A core library for data models"
authors = [
    {name = "cw"},
]
requires-python = ">=3.13"

dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml",
    "pyodbc"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
datacore = ["config/*.yaml"] 